Silly z-index fix

--- a/Releases/scene-transitions/transition.css
+++ b/Releases/scene-transitions/transition.css
@@ -1,6 +1,6 @@
 .transition {
 	position: fixed;
-	z-index: 99;
+	z-index: 399;
 	padding:10%;
 	height: 100vh;
 	width:100vw;
